--- a/index.html
+++ b/index.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABDELNASEER SMM | سيرفر الخدمات الاحترافي</title>
+    <title>ABDELNASEER SMM | السيرفر الرسمي</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="bg-gradient"></div>
-
-    <header>
-        <div class="brand-badge">إشراف: عبد الناصر طلعت</div>
-        <h1 class="main-title">ABDELNASEER SMM</h1>
-        <p style="opacity: 0.8; font-size: 1.2rem;">رقم #1 في تزويد متابعين السوشيال ميديا في مصر</p>
+    <header class="nt-header">
+        <div class="nt-avatar">
+            <img src="IMG-20251223-WA0001.jpg" alt="Abdelnaseer Talat">
+        </div>
+        <h1 class="nt-title">ABDELNASEER SMM</h1>
+        <p style="color: var(--nt-primary); font-weight: 700; margin-top: 10px;">إشراف كابتن عبد الناصر طلعت</p>
     </header>
 
-    <main class="services-container">
-        <div class="s-card">
-            <div class="icon-box">📺</div>
-            <h3>ساعات اليوتيوب</h3>
-            <p style="opacity: 0.6;">تفعيل الـ 4000 ساعة للمقايضة والربح</p>
-            <div class="price-box">
-                السعر: <span>250 ج.م</span>
-            </div>
-            <a href="https://wa.me/201XXXXXXXXX" class="cta-button">اطلب الخدمة الآن</a>
+    <main class="nt-grid">
+        <div class="nt-card ig-node">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" class="nt-icon" alt="Insta">
+            <h3>خدمات انستجرام الشاملة</h3>
+            <ul class="nt-service-list">
+                <li>تزويد متابعين (حقيقي + ضمان)</li>
+                <li>تزويد لايكات سريعة</li>
+                <li>مشاهدات ريلز (Reels)</li>
+            </ul>
+            <span class="nt-price">60 ج.م <small style="font-size: 1rem;">/ لـ 1000</small></span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-ig">اطلب الآن</a>
         </div>
 
-        <div class="s-card">
-            <div class="icon-box">🎵</div>
-            <h3>متابعين تيك توك</h3>
-            <p style="opacity: 0.6;">متابعين حقيقيين لفتح خاصية البث المباشر</p>
-            <div class="price-box">
-                1000 متابع: <span>40 ج.م</span>
-            </div>
-            <a href="https://wa.me/201XXXXXXXXX" class="cta-button">اطلب الخدمة الآن</a>
+        <div class="nt-card tt-node">
+            <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" class="nt-icon" alt="TikTok">
+            <h3>خدمات تيك توك</h3>
+            <ul class="nt-service-list">
+                <li>متابعين لفتح البث المباشر</li>
+                <li>زيادة لايكات وحركات إكسبلور</li>
+                <li>مشاهدات فيديو فورية</li>
+            </ul>
+            <span class="nt-price">70 ج.م <small style="font-size: 1rem;">/ لـ 1000</small></span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-tt">اطلب الآن</a>
         </div>
 
-        <div class="s-card">
-            <div class="icon-box">👤</div>
-            <h3>متابعين فيسبوك</h3>
-            <p style="opacity: 0.6;">زيادة متابعين الحسابات الشخصية والبيج</p>
-            <div class="price-box">
-                1000 متابع: <span>35 ج.م</span>
-            </div>
-            <a href="https://wa.me/201XXXXXXXXX" class="cta-button">اطلب الخدمة الآن</a>
+        <div class="nt-card fb-node">
+            <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="nt-icon" alt="FB">
+            <h3>خدمات فيسبوك</h3>
+            <ul class="nt-service-list">
+                <li>متابعين حسابات شخصية</li>
+                <li>تزويد متابعين بيج (Page)</li>
+                <li>لايكات وتفاعل على المنشورات</li>
+            </ul>
+            <span class="nt-price">70 ج.م <small style="font-size: 1rem;">/ لـ 1000</small></span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-fb">اطلب الآن</a>
         </div>
     </main>
 
-    <a href="https://wa.me/201XXXXXXXXX" class="wa-float">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" width="35" alt="WhatsApp">
-    </a>
-
-    <footer style="text-align: center; padding: 60px; opacity: 0.6;">
-        &copy; 2025 ABDELNASEER T PRO | جميع الحقوق محفوظة
+    <footer style="text-align: center; padding: 50px; border-top: 1px solid rgba(255,255,255,0.05);">
+        <p style="opacity: 0.4; letter-spacing: 2px;">AUTHOR: ABDELNASEER TALAT (NT-PRO)</p>
     </footer>
 
 </body>
