--- a/index.html
+++ b/index.html
@@ -3,59 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABDELNASEER SMM | السيرفر الرسمي</title>
+    <title>SMM TRENDING | NT SERVER</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="nt-header">
-        <div class="nt-avatar">
-            <img src="IMG-20251223-WA0001.jpg" alt="Abdelnaseer Talat">
+    <nav class="nt-nav">
+        <div class="nt-header-content">
+            <img src="IMG-20251223-WA0001.jpg" alt="عبد الناصر">
+            <span style="font-weight: 900; font-size: 1.4rem;">ABDELNASEER PRO</span>
         </div>
-        <h1 class="nt-title">ABDELNASEER SMM</h1>
-        <p style="color: var(--nt-primary); font-weight: 700; margin-top: 10px;">إشراف كابتن عبد الناصر طلعت</p>
+    </nav>
+
+    <header class="nt-hero">
+        <h1>ABDELNASEER SMM</h1>
+        <p style="color: #666; font-size: 1.3rem; margin-top: 15px;">المنصة الأولى لخدمات السوشيال ميديا الحقيقية</p>
     </header>
 
-    <main class="nt-grid">
-        <div class="nt-card ig-node">
-            <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" class="nt-icon" alt="Insta">
-            <h3>خدمات انستجرام الشاملة</h3>
-            <ul class="nt-service-list">
-                <li>تزويد متابعين (حقيقي + ضمان)</li>
-                <li>تزويد لايكات سريعة</li>
-                <li>مشاهدات ريلز (Reels)</li>
+    <main class="nt-matrix">
+        <div class="nt-service-card ig-node">
+            <div class="nt-icon-stage"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="IG"></div>
+            <h3>خدمات انستجرام</h3>
+            <ul class="nt-details">
+                <li>متابعين حقيقيين 100%</li>
+                <li>لايكات وتفاعل فوري</li>
+                <li>ضمان عدم النقصان 30 يوم</li>
             </ul>
-            <span class="nt-price">60 ج.م <small style="font-size: 1rem;">/ لـ 1000</small></span>
-            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-ig">اطلب الآن</a>
+            <span class="nt-price-tag">60 ج.م <small style="font-size: 0.9rem;">/1k</small></span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-buy-btn" style="background: linear-gradient(45deg, #f09433, #e1306c, #bc1888);">اطلب الآن</a>
         </div>
 
-        <div class="nt-card tt-node">
-            <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" class="nt-icon" alt="TikTok">
+        <div class="nt-service-card tt-node">
+            <div class="nt-icon-stage"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TT"></div>
             <h3>خدمات تيك توك</h3>
-            <ul class="nt-service-list">
-                <li>متابعين لفتح البث المباشر</li>
-                <li>زيادة لايكات وحركات إكسبلور</li>
-                <li>مشاهدات فيديو فورية</li>
+            <ul class="nt-details">
+                <li>فتح البث المباشر (1k)</li>
+                <li>زيادة إكسبلور ولايكات</li>
+                <li>مشاهدات عالمية فائقة</li>
             </ul>
-            <span class="nt-price">70 ج.م <small style="font-size: 1rem;">/ لـ 1000</small></span>
-            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-tt">اطلب الآن</a>
+            <span class="nt-price-tag">70 ج.م <small style="font-size: 0.9rem;">/1k</small></span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-buy-btn" style="background: #000; border: 1px solid #00f2ea;">اطلب الآن</a>
         </div>
 
-        <div class="nt-card fb-node">
-            <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="nt-icon" alt="FB">
+        <div class="nt-service-card fb-node">
+            <div class="nt-icon-stage"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="FB"></div>
             <h3>خدمات فيسبوك</h3>
-            <ul class="nt-service-list">
-                <li>متابعين حسابات شخصية</li>
-                <li>تزويد متابعين بيج (Page)</li>
-                <li>لايكات وتفاعل على المنشورات</li>
+            <ul class="nt-details">
+                <li>متابعين بروفايل وبيج</li>
+                <li>تفاعل ريأكشن (Reactions)</li>
+                <li>خدمات ساعات المشاهدة</li>
             </ul>
-            <span class="nt-price">70 ج.م <small style="font-size: 1rem;">/ لـ 1000</small></span>
-            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-fb">اطلب الآن</a>
+            <span class="nt-price-tag">70 ج.م <small style="font-size: 0.9rem;">/1k</small></span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-buy-btn" style="background: #1877f2;">اطلب الآن</a>
         </div>
     </main>
 
-    <footer style="text-align: center; padding: 50px; border-top: 1px solid rgba(255,255,255,0.05);">
-        <p style="opacity: 0.4; letter-spacing: 2px;">AUTHOR: ABDELNASEER TALAT (NT-PRO)</p>
+    <footer>
+        <p>&copy; 2025 ABDELNASEER TALAT. SYSTEM ARCHITECTURE BY NT-LABS.</p>
     </footer>
 
 </body>
