--- a/index.html
+++ b/index.html
@@ -4,62 +4,161 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMM TRENDING | NT SERVER</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <style>
+        /* ستايل SMM Trending الأصلي - حصري لكابتن عبد الناصر */
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap');
+
+        :root {
+            --dark-bg: #0b0e11; /* نفس لون خلفية SMM Trending */
+            --card-bg: #151a21;
+            --accent: #007bff;
+            --text-gray: #b0b3b8;
+        }
+
+        body {
+            margin: 0; padding: 0; font-family: 'Cairo', sans-serif;
+            background-color: var(--dark-bg); color: #fff;
+        }
+
+        /* الهيدر الثابت */
+        .nt-navbar {
+            background: rgba(11, 14, 17, 0.98);
+            padding: 15px 20px;
+            border-bottom: 1px solid #2d333b;
+            position: sticky; top: 0; z-index: 1000;
+            display: flex; align-items: center; justify-content: center; gap: 15px;
+        }
+
+        .nt-navbar img {
+            width: 50px; height: 50px; border-radius: 50%;
+            border: 2px solid var(--accent);
+        }
+
+        /* قسم العنوان الرئيسي */
+        .nt-hero {
+            padding: 80px 20px; text-align: center;
+            background: linear-gradient(to bottom, #1c2431 0%, var(--dark-bg) 100%);
+        }
+
+        .nt-hero h1 {
+            font-size: 3.5rem; font-weight: 900; margin: 0;
+            background: linear-gradient(to right, #fff, #888);
+            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+        }
+
+        /* شبكة الخدمات - ستايل التريندينج */
+        .nt-grid {
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 25px; max-width: 1200px; margin: -40px auto 100px; padding: 0 20px;
+        }
+
+        .nt-card {
+            background: var(--card-bg);
+            border: 1px solid #2d333b;
+            border-radius: 20px; padding: 40px 25px;
+            text-align: center; transition: 0.4s;
+            position: relative;
+        }
+
+        /* التوهج النيون العريض عند الوقوف */
+        .nt-card:hover {
+            transform: translateY(-10px);
+            border-color: var(--accent);
+            box-shadow: 0 15px 40px rgba(0, 123, 255, 0.2);
+        }
+
+        /* نور مخصص لكل منصة */
+        .insta:hover { border-color: #e1306c; box-shadow: 0 0 40px rgba(225, 48, 108, 0.3); }
+        .tiktok:hover { border-color: #00f2ea; box-shadow: 0 0 40px rgba(0, 242, 234, 0.2); }
+        .fb:hover { border-color: #1877f2; box-shadow: 0 0 40px rgba(24, 119, 242, 0.3); }
+
+        .nt-icon { width: 70px; margin-bottom: 20px; }
+
+        .nt-details {
+            list-style: none; padding: 0; margin: 20px 0;
+            text-align: right; border-top: 1px solid #2d333b; padding-top: 20px;
+        }
+
+        .nt-details li {
+            color: var(--text-gray); font-size: 0.95rem; margin-bottom: 12px;
+            display: flex; align-items: center; gap: 10px;
+        }
+
+        .nt-details li::before { content: '✓'; color: #00ff88; font-weight: bold; }
+
+        .nt-price {
+            font-size: 2.2rem; font-weight: 900; color: #00ff88;
+            margin-bottom: 25px; display: block;
+        }
+
+        .nt-btn {
+            display: block; width: 100%; padding: 15px; border-radius: 12px;
+            color: #fff; text-decoration: none; font-weight: 800;
+            background: var(--accent); transition: 0.3s;
+        }
+
+        .btn-insta { background: linear-gradient(45deg, #f09433, #e1306c, #bc1888); }
+        .btn-tiktok { background: #000; border: 1px solid #00f2ea; }
+        .btn-fb { background: #1877f2; }
+
+        .nt-btn:hover { filter: brightness(1.2); transform: scale(1.02); }
+
+        footer { text-align: center; padding: 50px; opacity: 0.3; font-size: 0.8rem; }
+    </style>
 </head>
 <body>
 
-    <nav class="nt-nav">
-        <div class="nt-header-content">
-            <img src="IMG-20251223-WA0001.jpg" alt="عبد الناصر">
-            <span style="font-weight: 900; font-size: 1.4rem;">ABDELNASEER PRO</span>
-        </div>
+    <nav class="nt-navbar">
+        <img src="IMG-20251223-WA0001.jpg" alt="Abdelnaseer Talat">
+        <span style="font-weight: 900; font-size: 1.3rem;">ABDELNASEER SMM</span>
     </nav>
 
     <header class="nt-hero">
-        <h1>ABDELNASEER SMM</h1>
-        <p style="color: #666; font-size: 1.3rem; margin-top: 15px;">المنصة الأولى لخدمات السوشيال ميديا الحقيقية</p>
+        <h1>SMM TRENDING NT</h1>
+        <p style="color: var(--text-gray); font-weight: 700; margin-top: 15px;">الجيل القادم من خدمات السوشيال ميديا</p>
     </header>
 
-    <main class="nt-matrix">
-        <div class="nt-service-card ig-node">
-            <div class="nt-icon-stage"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="IG"></div>
-            <h3>خدمات انستجرام</h3>
+    <main class="nt-grid">
+        <div class="nt-card insta">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" class="nt-icon" alt="IG">
+            <h3>تزويد انستجرام</h3>
             <ul class="nt-details">
-                <li>متابعين حقيقيين 100%</li>
+                <li>متابعين حقيقيين (سيرفر 1)</li>
                 <li>لايكات وتفاعل فوري</li>
                 <li>ضمان عدم النقصان 30 يوم</li>
             </ul>
-            <span class="nt-price-tag">60 ج.م <small style="font-size: 0.9rem;">/1k</small></span>
-            <a href="https://wa.me/201XXXXXXXXX" class="nt-buy-btn" style="background: linear-gradient(45deg, #f09433, #e1306c, #bc1888);">اطلب الآن</a>
+            <span class="nt-price">60 ج.م</span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-insta">شراء الخدمة</a>
         </div>
 
-        <div class="nt-service-card tt-node">
-            <div class="nt-icon-stage"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TT"></div>
-            <h3>خدمات تيك توك</h3>
+        <div class="nt-card tiktok">
+            <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" class="nt-icon" alt="TT">
+            <h3>تزويد تيك توك</h3>
             <ul class="nt-details">
-                <li>فتح البث المباشر (1k)</li>
+                <li>1000 متابع لفتح البث</li>
                 <li>زيادة إكسبلور ولايكات</li>
-                <li>مشاهدات عالمية فائقة</li>
+                <li>ثبات عالي جداً</li>
             </ul>
-            <span class="nt-price-tag">70 ج.م <small style="font-size: 0.9rem;">/1k</small></span>
-            <a href="https://wa.me/201XXXXXXXXX" class="nt-buy-btn" style="background: #000; border: 1px solid #00f2ea;">اطلب الآن</a>
+            <span class="nt-price">70 ج.م</span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-tiktok">شراء الخدمة</a>
         </div>
 
-        <div class="nt-service-card fb-node">
-            <div class="nt-icon-stage"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="FB"></div>
-            <h3>خدمات فيسبوك</h3>
+        <div class="nt-card fb">
+            <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="nt-icon" alt="FB">
+            <h3>تزويد فيسبوك</h3>
             <ul class="nt-details">
-                <li>متابعين بروفايل وبيج</li>
-                <li>تفاعل ريأكشن (Reactions)</li>
+                <li>متابعين حسابات وصفحات</li>
+                <li>لايكات ريأكشن حقيقية</li>
                 <li>خدمات ساعات المشاهدة</li>
             </ul>
-            <span class="nt-price-tag">70 ج.م <small style="font-size: 0.9rem;">/1k</small></span>
-            <a href="https://wa.me/201XXXXXXXXX" class="nt-buy-btn" style="background: #1877f2;">اطلب الآن</a>
+            <span class="nt-price">70 ج.م</span>
+            <a href="https://wa.me/201XXXXXXXXX" class="nt-btn btn-fb">شراء الخدمة</a>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 ABDELNASEER TALAT. SYSTEM ARCHITECTURE BY NT-LABS.</p>
+        COPYRIGHT &copy; 2025 | DEVELOPED BY ABDELNASEER TALAT (NT-PRO)
     </footer>
 
 </body>
